# nexcore-brain

./: CLAUDE.md  Cargo.toml  README.md
src/: artifact.rs  config.rs  coordination.rs  db.rs  error.rs  grounding.rs  implicit.rs  insight_adapter.rs  lib.rs  main.rs  metrics.rs  nmd_bridge.rs  pipeline.rs  prelude.rs  recovery.rs  session.rs  synapse.rs  tombstone.rs  tracker.rs  transfer.rs  typed_artifact.rs
src/implicit/: belief.rs  belief_graph.rs  correction.rs  evidence.rs  pattern.rs  preference.rs  t1.rs  trust.rs
tests/: property_tests.rs  safety_tests.rs
